--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,10 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto:400,700&subset=latin-ext');
+
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
+}
+html{
+    font-family: 'Roboto', sans-serif;
 }
